<resources>
    <string name="app_name">FragmentExercise</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment"><![CDATA[Quick & Easy Payment]]></string>
    <string name="ob_des_1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="grow">Help You Grow</string>
    <string name="bussiness_support">Bussiness Support</string>
    <string name="the_future_of_trading">The future of trading</string>
    <string name="welcome_log_in">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="sign_up">Sign Up</string>
    <string name="change_password">We have sent you an\nemail to change your</string>
    <string name="create">Create a free account!</string>
    <string name="signup_login">Login</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up_bt">SIGN UP</string>
    <string name="change_pass">Yay! Your password has been</string>
    <string name="log_in">You can now log into your account</string>
    <string name="log_in2">with the new password</string>
    <string name="neo">NEO chart</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n \nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>